# -Cloud-Native-Application-Architecture

./: .gitignore  readme.md
external-api-lab/: pyproject.toml
external-api-lab/external_api_lab/: main.py
fastapi-lab/: dev.Dockerfile  prod.Dockerfile  pyproject.toml
fastapi-lab/fastapi_lab/: __init__.py  main.py  user.py
gemini/: pyproject.toml
gemini/src/gemini/: main.py
lab2/: pyproject.toml
lab2/lab2/: __init__.py  lab2.py
lab2/lab2/logs/: log1.txt  log2.txt  log3.txt  log4.txt  log5.txt
lab2/tests/: __init__.py  lab2_test.py
lab2/tests/logs/: logTest.txt
lab2/tests/sample_data/: logTest.txt
my_project/: __init__.py  fetch.py  pyproject.toml
my_project/tests/: test_example.py
orm-lab/: pyproject.toml
orm-lab/src/orm_lab/: config.py  init_db.py  main.py  models.py
practice-project/: README.md  docker-compose.yml  pyproject.toml  restart-docker.ps1  restart-docker.sh
practice-project/src/backend/: Dockerfile  main.py  requirements.txt
practice-project/src/backend/app/: __init__.py  db.py  llm.py  models.py  schemas.py
practice-project/src/frontend/: Dockerfile  app.py  requirements.txt
streamlit-fastapi-demo/: pyproject.toml
streamlit-fastapi-demo/src/streamlit_fastapi_demo/backend/: main.py
streamlit-fastapi-demo/src/streamlit_fastapi_demo/frontend/: app.py
textproc/: pyproject.toml
textproc/tests/: __init__.py  lab1_part2_test.py  lab1_test.py
textproc/tests/sample_data/: Sample1.txt  Sample2.txt
textproc/textproc/: __init__.py  lab1.py  lab1_part2.py
