[project]
name = "resume-job-matcher"
version = "0.1.0"
description = "Web app for matching resumes with job listings using LLM"
authors = [
    {name = "Mikestriken",email = "michael.john.marais379@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.23.2",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1",
    "python-multipart>=0.0.6",
    "google-generativeai>=0.3.1",
    "email-validator>=2.1.0.post1",
    "asyncio>=3.4.3",
    "streamlit>=1.28.1",
    "pandas>=2.1.2",
    "requests>=2.31.0",
    "PyPDF2>=3.0.1",
]

[tool.poetry]
packages = [{include = "resume_job_matcher", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
