[project]
name = "streamlit-fastapi-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikestriken",email = "michael.john.marais379@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "streamlit (>=1.44.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "streamlit_fastapi_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
